Version 1.0-rc3 (changes from aircrack-ng 1.0-rc2) - Released ?? ??? 2009:
* airodump-ng: Added support for kismet-newcore netxml files (DTD v3.1.0)
* airodump-ng: Changed file extensions for CSV (.csv instead of .txt) and for kismet CSV
  (.kismet.csv instead of .csv).
* airodump-ng: Fixed WPA tag parsing and added QoS detection based on direction.
* aircrack-ng: Fixed -w with WEP.
* aircrack-ng: Fixed useless memory allocation.
* aircrack-ng: Fixed compilation with gcc 2.95.
* aircrack-ng: Fixed compilation on 64 bit (SHA-SSE2).
* aircrack-ng: Fixed errors when compiling on OS X 10.5.6 PPC.
* aircrack-ng: Added an option to write the key to a file.
* airolib-ng: Fixed a bug where database is created even if parameters are not correct.
* airmon-ng: Added wifibox to the list of network manager.
* airmon-ng: Updated iw download link (0.9.9).
* airmon-ng and airdriver-ng: Move them in script/ directory.
* airmon-ng: Bypass interface checks when ps command returns an error. Needed for BusyBox limited ps command.
* tkiptun-ng: Allow padded arp packets to the client.
* airserv-ng & osdep: Fixed compilation on FreeBSD 7.1
* easside-ng & wesside-ng: Fixing again "Error Wrote 39 out of 30" error message.
* manpages: Fixed manpages titles.
* Makefile: Only compile and install wesside-ng, easside-ng, buddy-ng and tkiptun-ng with "make unstable=true".
* patches: Updated sqlite (v3.6.11) patch for cygwin.

Version 1.0-rc2 (changes from aircrack-ng 1.0-rc1) - Released 22 Jan 2009:
* aircrack-ng: Added SSE2 supports (WPA cracking speed is improved a lot) thanks to nx5.
* aircrack-ng: Fixed detection of the number of CPU (especially with recent CPUs).
* aircrack-ng: Fixed long lasting WPA bugs: cannot find the key with SMP computers,
  wasn't exiting correctly, ...
* aircrack-ng: Fixed usage of a dictionnary with WEP.
* aircrack-ng: Now only display ASCII WEP keys when 100% of the hex key can be converted to ASCII.